Issue #3404663 by shweta__sharma, Tanuj., Gauravvvv, sdhruvi5142, Nitin shrivastava, smustgrave, Kanchan Bhogade: Olivero: Show content preview checkbox is not center aligned with the layout builder buttons
(cherry picked from commit 572e32753ae7f2a6fac5f83ae56b267b59bf8408)

--- a/core/themes/olivero/css/components/form.css
+++ b/core/themes/olivero/css/components/form.css
@@ -210,3 +210,7 @@ tr .form-item,
 .form--inline .form-actions {
   margin-top: var(--sp1-5);
 }
+
+.layout-builder-form .form-actions {
+  align-items: center;
+}
